# engine

./: .gitignore  .travis.yml  .valgrind  AUTHORS  CMakeDSStore.oas  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Info.plist.in  LICENSE  Makefile  README.md  appveyor.yml  conanfile.py  lgtm.yml  locate_dependencies.cmake  run-test.sh
Components/OgreCrowd/: CMakeLists.txt
Components/OgreCrowd/include/: OgreDetourTileCache.h
Core/: CMakeLists.txt  Info.plist.in
Core/cmd/: packager.cpp
Core/include/: AsyncObject.h  Component.h  ComponentStorage.h  Dictionary.h  DictionaryConverters.h  DynLib.h  Engine.h  EngineEvent.h  EngineSystem.h  Entity.h  EventDispatcher.h  EventSubscriber.h  FileLoader.h  Filesystem.h  GeometryPrimitives.h  GsageDefinitions.h  GsageFacade.h  KeyboardEvent.h  Logger.h  ObjectPool.h  PtreeExtensions.h  ResourceMonitor.h  ScopedLocale.h  Serializable.h  ThreadSafeQueue.h  Version.h.in  WindowManager.h  WindowManagerFactory.h  macUtils.h
Core/include/OSX/: MainWrapperOSX.h  Utils.h
Core/include/WIN32/: CommandLine.h  WindowsIncludes.h
Core/include/components/: MovementComponent.h  RenderComponent.h  ScriptComponent.h  StatsComponent.h
Core/include/input/: InputFactory.h
Core/include/lua/: LuaEventConnection.h  LuaEventProxy.h  LuaInterface.h
Core/include/serialization/: DataWrapper.h
Core/include/systems/: RenderSystem.h
Core/src/: Component.cpp  DataProxy.cpp  Dictionary.cpp  DictionaryConverters.cpp  DynLib.cpp  Engine.cpp  EngineEvent.cpp  EngineSystem.cpp  Entity.cpp  EventDispatcher.cpp  FileLoader.cpp  Filesystem.cpp  GsageFacade.cpp  IPlugin.cpp  MouseEvent.cpp  Path.cpp  ResourceMonitor.cpp  WindowManager.cpp  WindowManagerFactory.cpp  macUtils.mm
Core/src/WIN32/: CommandLine.cpp
Core/src/lua/: LuaEventConnection.cpp  LuaInterface.cpp
Core/src/serialization/: DataWrapper.cpp
Core/src/systems/: RenderSystem.cpp
Editor/: CMakeLists.txt  main.cpp
Editor/application/: EditorApplication.cpp  EditorApplication.h  OgreItem.h  ProjectManager.cpp  ProjectManager.h
Editor/include/: Editor.h  EditorFacade.h  QOgreRenderSystem.h
Editor/src/: Editor.cpp  EngineRunner.cpp  OgreNode.cpp  QOgreRenderSystem.cpp  main.cpp
GsageCore/: CMakeLists.txt
GsageCore/include/: Component.h  ComponentStorage.h  Converters.h  DataProxy.h  Dictionary.h  DynLib.h  Engine.h  EngineEvent.h  EngineSystem.h  Entity.h  EventDispatcher.h  EventSubscriber.h  FileLoader.h  Filesystem.h  GameDataManager.h  GeometryPrimitives.h  GsageDefinitions.h  GsageFacade.h  IPlugin.h  KeyboardEvent.h  Logger.h  MouseEvent.h  ObjectPool.h  Path.h  ResourceMonitor.h  ScopedLocale.h  Serializable.h  ThreadSafeQueue.h  UIManager.h  UpdateListener.h  WindowManager.h  WindowManagerFactory.h
GsageCore/include/OSX/: MainWrapperOSX.h
GsageCore/include/components/: BaseRenderComponent.h  ScriptComponent.h  StatsComponent.h
GsageCore/include/input/: InputFactory.h  OisInputListener.h
GsageCore/include/lua/: LuaEventConnection.h  LuaEventProxy.h  LuaHelpers.h  LuaInterface.h
GsageCore/include/serialization/: DataWrapper.h  JsonValueWrapper.h  SolTableWrapper.h
GsageCore/include/systems/: CombatSystem.h  LuaScriptSystem.h  MovementSystem.h  RenderSystem.h  SystemFactory.h  SystemManager.h
GsageCore/src/: AsyncObject.cpp  Converters.cpp  DataProxy.cpp  Dictionary.cpp  Engine.cpp  EngineEvent.cpp  EngineSystem.cpp  Entity.cpp  EventDispatcher.cpp  FileLoader.cpp  Filesystem.cpp  GameDataManager.cpp  GeometryPrimitives.cpp  GsageFacade.cpp  KeyboardEvent.cpp  MouseEvent.cpp  ResourceMonitor.cpp  WindowManager.cpp
GsageCore/src/OSX/: Utils.mm
GsageCore/src/components/: BaseRenderComponent.cpp  MovementComponent.cpp  RenderComponent.cpp  ScriptComponent.cpp  StatsComponent.cpp
GsageCore/src/input/: InputFactory.cpp  OisInputListener.cpp  OisKeyboardEvent.cpp
GsageCore/src/lua/: LuaEventConnection.cpp  LuaEventProxy.cpp  LuaInterface.cpp
GsageCore/src/serialization/: DataWrapper.cpp  JsonValueWrapper.cpp  SolTableWrapper.cpp
GsageCore/src/systems/: CombatSystem.cpp  LuaScriptSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  SystemManager.cpp
GsageExe/: CMakeLists.txt
GsageExe/include/OSX/: MainWrapperOSX.h
GsageExe/src/: Main.cpp
GsageFacade/: CMakeLists.txt
GsageFacade/include/: AnimationScheduler.h  CameraFactory.h  CollisionTools.h  GameDataManager.h  GsageFacade.h  IPlugin.h  OgreInteractionManager.h  OgreWrappers.h  RenderEvent.h  ResourceManager.h  UIManager.h
GsageFacade/include/components/: MovementComponent.h  RenderComponent.h  (+2 more)
GsageFacade/src/: AnimationScheduler.cpp  CameraFactory.cpp  GameDataManager.cpp  GsageFacade.cpp  OgreInteractionManager.cpp  RenderEvent.cpp  ResourceManager.cpp
PlugIns/: CMakeLists.txt
PlugIns/CEF/: CMakeLists.txt
PlugIns/ImGUI/: CMakeLists.txt
PlugIns/OgrePlugin/: CMakeLists.txt
PlugIns/OisInput/: CMakeLists.txt
PlugIns/ParticleUniverse/: CMakeLists.txt
PlugIns/RecastNavigation/: CMakeLists.txt
PlugIns/RocketUI/: CMakeLists.txt
PlugIns/SDL/: CMakeLists.txt
QEditor/: CMakeLists.txt  README.md
QEditor/application/: EditorApplication.cpp  EditorApplication.h  OgreItem.cpp  ProjectManager.cpp  ProjectManager.h
QEditor/include/: EditorFacade.h  EngineRunner.h  OgreNode.h  QOgreRenderSystem.h
QEditor/src/: EditorFacade.cpp  EngineRunner.cpp  OgreNode.cpp  QOgreRenderSystem.cpp
RocketWrapper/: CMakeLists.txt
RocketWrapper/include/: RenderInterfaceOgre3D.h  RocketUIManager.h
RocketWrapper/src/: Main.cpp  RenderInterfaceOgre3D.cpp  RocketUIManager.cpp  SystemInterfaceOgre3D.cpp
Tests/: CMakeLists.txt  functional.cpp  main.cpp  unit.cpp
Tests/Core/: TestDataProxy.cpp  TestDictionary.cpp  TestEngine.cpp  TestEntityParser.cpp  TestEventDispatcher.cpp  TestFileLoader.cpp  TestGsageFacade.cpp  TestPath.cpp  TestPtreeExtensions.cpp  TestSerializable.cpp  TestThreadSafeQueue.cpp
Tests/TestPlugins/: CMakeLists.txt
Tests/include/: TestDefinitions.h
Tests/resources/: entities.json  expected.json  save1.json  templated.json  templated.msgpack  test.msgpack  testLocation.json
tools/: prerm  (+6 more)
(+532 files in other folders)
